--- a/LiquorSS/package.json
+++ b/LiquorSS/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/cinzel": "^0.2.3",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/drawer": "^7.0.4",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/stack": "^7.0.2",
     "expo": "~52.0.7",
@@ -18,7 +21,9 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.1.0"
