--- a/LiquorSS/package.json
+++ b/LiquorSS/package.json
@@ -17,15 +17,15 @@
     "@react-navigation/stack": "^7.0.2",
     "expo": "~52.0.7",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "^13.0.1",
+    "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.5",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.1.0"
   },
   "devDependencies": {
