--- a/LiquorSS/package.json
+++ b/LiquorSS/package.json
@@ -19,6 +19,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-date-picker": "^5.0.7",
