--- a/LiquorSS/package.json
+++ b/LiquorSS/package.json
@@ -15,19 +15,19 @@
     "@react-navigation/drawer": "^7.0.4",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/stack": "^7.0.2",
-    "expo": "~52.0.7",
+    "expo": "~52.0.35",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "~13.0.2",
-    "expo-status-bar": "~2.0.0",
+    "expo-font": "~13.0.3",
+    "expo-status-bar": "~2.0.1",
     "firebase": "^11.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.7",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.1.0"
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
