--- a/LiquorSS/package.json
+++ b/LiquorSS/package.json
@@ -4,20 +4,26 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/cinzel": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-firebase/app": "^21.10.0",
+    "@react-native-firebase/auth": "^21.10.0",
+    "@react-native-firebase/firestore": "^21.10.0",
     "@react-navigation/drawer": "^7.0.4",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/stack": "^7.0.2",
     "expo": "~52.0.35",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.3",
+    "expo-modules-core": "^2.2.2",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.1.0",
     "react": "18.3.1",
@@ -30,7 +36,8 @@
     "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^15.1.3"
   },
   "private": true
 }
