Requerimiento de realizacion de pedidos con direcciones y metodos de pago completado. APIs de google maps agregado con vinculacion de direcciones con estatus activas desde la basee de datos en firestore DB para el trazamiento de rutas desde el punto de origen hasta el destino designado por el usuario

--- a/LiquorSS/app.json
+++ b/LiquorSS/app.json
@@ -16,9 +16,15 @@
       "supportsTablet": true
     },
     "android": {
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDCJ_ayzrh043-SixcjtA5qKPfKqggpARg"
+        }
+      },
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+        
       },
       "package": "com.SansCorp.LiquorSS"
     },
@@ -30,3 +36,4 @@
     ]
   }
 }
+
