--- a/LiquorSS/package.json
+++ b/LiquorSS/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^7.0.4",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/stack": "^7.0.2",
+    "axios": "^1.8.4",
     "expo": "~52.0.35",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.3",
@@ -30,6 +31,7 @@
     "react-native": "^0.76.7",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.20.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
